--- a/text_based_slider/empty_carousel/index.html
+++ b/text_based_slider/empty_carousel/index.html
@@ -13,8 +13,8 @@
     <div class="carousel" data-flickity='{ "autoPlay": true }'>
       <div class="carousel-cell card">
         <img
-          src=""
-          alt="Avatar"
+          src="https://picsum.photos/200/300/?blur=2"
+          alt="No image found for carousel"
           style="width: 100%; height: 60%; object-fit: cover"
         />
         <div class="container">
