--- a/text_based_slider/empty_carousel/index.html
+++ b/text_based_slider/empty_carousel/index.html
@@ -18,7 +18,7 @@
           style="width: 100%; height: 60%; object-fit: cover"
         />
         <div class="container">
-          <h4><b>Carousel title</b></h4>
+          <h4><b>CAROUSEL TITLE</b></h4>
           <p>Carousel text</p>
           <a
             target="_blank"
