--- a/text_based_slider/empty_carousel/index.html
+++ b/text_based_slider/empty_carousel/index.html
@@ -37,5 +37,10 @@
     <!-- partial -->
     <script src="./flickity.pkgd.js"></script
     >
+
+
+    <script>
+      alert(window.parent.SomeFunctionDefinedInTheParent(window.jsonObject.serviceform.questions));
+    </script>
   </body>
 </html>
