--- a/text_based_slider/empty_carousel/index.html
+++ b/text_based_slider/empty_carousel/index.html
@@ -31,6 +31,68 @@
         </div>
       </div>
 
+
+      <div class="sf-carousel-cell sf-carousel-card">
+        <img
+          src="https://picsum.photos/200/300/?blur=2"
+          alt="No image found for carousel"
+          style="width: 100%; height: 60%; object-fit: cover"
+        />
+        <div class="sf-carousel-container">
+          <h4><b>CAROUSEL TITLE</b></h4>
+          <p>Carousel text</p>
+          <a
+            target="_blank"
+            class="sf-carousel-button"
+            href=""
+            ><div class="servicechat-admin-options" question="180" option="1"
+              >FIND OUT MORE</div
+            ></a
+          >
+        </div>
+      </div>
+
+
+      <div class="sf-carousel-cell sf-carousel-card">
+        <img
+          src="https://picsum.photos/200/300/?blur=2"
+          alt="No image found for carousel"
+          style="width: 100%; height: 60%; object-fit: cover"
+        />
+        <div class="sf-carousel-container">
+          <h4><b>CAROUSEL TITLE</b></h4>
+          <p>Carousel text</p>
+          <a
+            target="_blank"
+            class="sf-carousel-button"
+            href=""
+            ><div class="servicechat-admin-options" question="180" option="1"
+              >FIND OUT MORE</div
+            ></a
+          >
+        </div>
+      </div>
+
+
+      <div class="sf-carousel-cell sf-carousel-card">
+        <img
+          src="https://picsum.photos/200/300/?blur=2"
+          alt="No image found for carousel"
+          style="width: 100%; height: 60%; object-fit: cover"
+        />
+        <div class="sf-carousel-container">
+          <h4><b>CAROUSEL TITLE</b></h4>
+          <p>Carousel text</p>
+          <a
+            target="_blank"
+            class="sf-carousel-button"
+            href=""
+            ><div class="servicechat-admin-options" question="180" option="1"
+              >FIND OUT MORE</div
+            ></a
+          >
+        </div>
+      </div>
     
    
     </div>
